Adding reads in pom.xml file