@@ -42,7 +42,8 @@
     <jacoco.min.branchcoverage>0.15</jacoco.min.branchcoverage>
     <javaModulesSurefireArgLine>
       --add-exports com.azure.analytics.purview.sharing/com.azure.analytics.purview.sharing.models=ALL-UNNAMED
-      --add-opens com.azure.analytics.purview.sharing/com.azure.analytics.purview.sharing.models=com.fasterxml.jackson.databind
+      --add-opens com.azure.analytics.purview.sharing/com.azure.analytics.purview.sharing.models=ALL-UNNAMED
+      --add-reads com.azure.analytics.purview.sharing=ALL-UNNAMED
     </javaModulesSurefireArgLine>
   </properties>
   <dependencies>
